# StudentsDatabase

./: .travis.yml  CMakeLists.txt  Database.cpp  Database.hpp  Person.cpp  Person.hpp  PeselValidation.cpp  README.md  Student.cpp  Student.hpp  Worker.cpp  Worker.hpp  data_base.txt  main.cpp  test_main.cpp
inc/: Database.hpp  PeselValidation.hpp  Student.hpp  Worker.hpp
src/: Database.cpp  Person.cpp  PeselValidation.cpp  Student.cpp  Worker.cpp  main.cpp
test/: old-tests.cpp  tests-Database.cpp
tests/: old-tests.cpp  tests-Database.cpp
